working on reply

--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -30,6 +30,8 @@
         <!-- 댓글등록 -->
         <div class="card-body">
             <form action="/reply/save" method="post">
+                <input type="hidden" name="boardId" value="{{board.id}}">
+                <!--board id 를 가지고 있는데, 숨겨라-->
                 <textarea class="form-control" rows="2" name="comment"></textarea>
                 <div class="d-flex justify-content-end">
                     <button type="submit" class="btn btn-outline-primary mt-1">댓글등록</button>
